
* General

  - Dropped support for Python 2.4, 2.5, 3.1, and 3.2.
  - Infrastructure automation.

* docs/ref/rst/restructuredtext.txt:

  - Document rST syntax change: Tokens like ``:this:example:`` are now valid
    field list names (instead of ordinary text).

* docutils/io.py

  - Fix [ 348 ] Since Python 3.4, the 'U' universal newlines mode has been
    deprecated (thanks to hugovk).

* docutils/nodes.py

  - Fix [ 251 ] system_message.copy() TypeError.
  - Element.copy() also copies `document`, `line`, and `source` attributes.

* docutils/parsers/rst/states.py:

  - Allow embedded colons in field list field names.
  - Add `rawsource` attribute for text of inline elements.

* docutils/parsers/rst/directives/html.py:

  - Fix bug #281: Remove escaping backslashes in meta directive content.

* docutils/parsers/rst/directives/misc.py:

  - Don't convert tabs to spaces, if `tab_width` is negative in
    `include` directive with `code` option.

* docutils/parsers/rst/directives/tables.py:

  - Apply patch #121: Add "width" option for the table directives.

* docutils/transforms/frontmatter.py:

  - Add field name as class argument to generic docinfo fields unconditionally.

* docutils/transforms/references.py:

  - Fix bug #331: fixed the "trim" options of the "unicode" directive.

* docutils/utils/__init__.py:

  - Deprecate `unique_combinations` (obsoleted by `itertools.combinations`).

* docutils/utils/smartquotes.py:

  - Fix bug #332: use open quote after whitespace, ZWSP, and ZWNJ.

* docutils/writers/html5_polyglot/

  - automatically add HTML5-compatible meta tags for docinfo items
    "authors", "date", and "copyright".

* docutils/writers/_html_base.py

  - Fix bug #358: Non-breaking space removed from fixed-width literal.

* docutils/writers/latex2e/__init__.py:

  - Fix bug #323: spurious ``\phantomsection`` and whitespace in
    ``parts['title']``.
  - Fix bug #324: Invalid LaTeX for table with empty multicolumn cell.